Subtitle select no longer overlaps other elements

--- a/app/css/video.less
+++ b/app/css/video.less
@@ -109,9 +109,6 @@ html.video-page{
         max-width: 100%;
     }
 }
-#target-0{
-    height: 60%;
-}
 #target-1{
     margin-top: 9%;
     padding-left: 1%;
